--- a/zuixin.html
+++ b/zuixin.html
@@ -420,7 +420,7 @@
 
             <a href="/71.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/StairRace3DTeaser.jpg" alt="Stair Race 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/StairRace3dTeaser.jpg?v=0.2-e9a56fac" alt="Stair Race 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Stair Race 3D</h3>
@@ -430,7 +430,7 @@
 
             <a href="/72.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/CrowdRun3DTeaser.jpg" alt="Crowd Run 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/_CrowdRun3dTeaser.jpg?v=0.2-e9a56fac" alt="Crowd Run 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Crowd Run 3D</h3>
@@ -450,7 +450,7 @@
 
             <a href="/74.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/Dices20483DTeaser.jpg" alt="Dices 2048 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/Dices20483dTeaser.jpg?v=0.2-e9a56fac" alt="Dices 2048 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Dices 2048 3D</h3>
@@ -490,7 +490,7 @@
 
             <a href="/78.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/PopIt3DTeaser.jpg" alt="Pop It 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/PopIt3dTeaser.jpg?v=0.2-e9a56fac" alt="Pop It 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Pop It 3D</h3>
@@ -510,7 +510,7 @@
 
             <a href="/80.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/OnetGallery3DTeaser.jpg" alt="Onet Gallery 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/OnetGallery3dTeaser.jpg?v=0.2-e9a56fac" alt="Onet Gallery 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Onet Gallery 3D</h3>
@@ -590,7 +590,7 @@
 
             <a href="/88.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/GardenMatch3DTeaser.jpg" alt="Garden Match 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/GardenMatch3dTeaser.jpg?v=0.2-e9a56fac" alt="Garden Match 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Garden Match 3D</h3>
@@ -610,7 +610,7 @@
 
             <a href="/90.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/BubbleTower3DTeaser.jpg" alt="Bubble Tower 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/BubbleTower3dTeaser.jpg?v=0.2-e9a56fac" alt="Bubble Tower 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Bubble Tower 3D</h3>
@@ -660,7 +660,7 @@
 
             <a href="/95.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/TNTBombTeaser.jpg" alt="TNT Bomb" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/TntBombTeaser.jpg" alt="TNT Bomb" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">TNT Bomb</h3>
@@ -710,7 +710,7 @@
 
             <a href="/100.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/CurveBall3DTeaser.jpg" alt="Curve Ball 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/CurveBall3dTeaser.jpg?v=0.2-e9a56fac" alt="Curve Ball 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Curve Ball 3D</h3>
@@ -790,7 +790,7 @@
 
             <a href="/108.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/TowerCrash3DTeaser.jpg" alt="Tower Crash 3D" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/TowerCrash3dTeaser.jpg?v=0.2-e9a56fac" alt="Tower Crash 3D" class="game-image">
                 </div>
                 <div class="game-info">
                     <h3 class="game-title">Tower Crash 3D</h3>
@@ -900,10 +900,10 @@
 
             <a href="/119.html" class="game-card" target="_blank">
                 <div class="game-image-container">
-                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/MotoX3MTeaser.jpg" alt="Moto X3M" class="game-image">
+                    <img src="https://img.cdn.famobi.com/portal/html5games/images/tmp/AdventureDriversTeaser.jpg" alt="Adventure Drivers" class="game-image">
                 </div>
                 <div class="game-info">
-                    <h3 class="game-title">Moto X3M</h3>
+                    <h3 class="game-title">Adventure Drivers</h3>
                     <p class="game-category">Racing</p>
                 </div>
             </a>
